# blender-mcp

./: LICENSE  README.md  addon.py  pyproject.toml
src/blender_mcp/: server.py
src/blender_mcp/data/: materials.json
src/blender_mcp/tools/: __init__.py  materials.py  primitives.py  simplify.py  simviz.py  views.py
