[project]
name = "blender-mcp"
version = "1.5.5+fork.1"
description = "Blender integration through the Model Context Protocol (telemetry-free fork)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "lucasgfsvd"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
blender_mcp = ["data/*.json"]

[project.urls]
"Homepage" = "https://github.com/lucasgfsvd/blender-mcp"
"Bug Tracker" = "https://github.com/lucasgfsvd/blender-mcp/issues"
"Upstream" = "https://github.com/ahujasid/blender-mcp"
